Add expense summary
