# app/api/v1/expense/router.go
@@ -9,12 +9,13 @@ import (
 type Controllable interface {
 	GetExpense(c *gin.Context)
 	GetExpenses(c *gin.Context)
+	GetExpenseSummary(c *gin.Context)
 }
 
 // Routes adds expenses api endpoints
 // Controller injection enables easier testing
 func Routes(engine router.Router, controllable Controllable) {
-	// engine.GET("/expense-summary/:year/:month", controllable.GetExpenses)
 	engine.GET("/expense/:expense_type/:year/:month", controllable.GetExpenses)
 	engine.GET("/expenses/:year/:month", controllable.GetExpenses)
+	engine.GET("/expense-summary/:year/:month", controllable.GetExpenseSummary)
 }
