# app/models/expense.go
@@ -1,6 +1,8 @@
 package models
 
-import "time"
+import (
+	"time"
+)
 
 // ExpenseType represents an expense type
 type ExpenseType struct {
@@ -9,12 +11,37 @@ type ExpenseType struct {
 	SplitType SplitType
 }
 
+// ExpenseStatus represents the payment status of the expense
+type ExpenseStatus string
+
+const (
+	// PaidStatus means the expense has been paid by both parties
+	PaidStatus ExpenseStatus = "Paid"
+	// CoveredStatus means the expense is covered and does not need to be paid
+	CoveredStatus ExpenseStatus = "Covered"
+	// UnpaidStatus means the expense has not been paid by both parties
+	UnpaidStatus ExpenseStatus = "Unpaid"
+)
+
+func (es ExpenseStatus) priority() int {
+	switch es {
+	case PaidStatus:
+		return 0
+	case CoveredStatus:
+		return 1
+	case UnpaidStatus:
+		return 2
+	}
+
+	return -1
+}
+
 // Expense represents a single expense
 type Expense struct {
 	ExpenseID int
 	ExpenseType ExpenseType
 	Amount float32
-	Status int
+	Status ExpenseStatus
 	CreatedAt time.Time
 }
 
@@ -22,11 +49,14 @@ type Expense struct {
 type ExpenseSummary struct {
 	MyAmount float32
 	HerAmount float32
-	Status bool
+	Status string
 }
 
-func createExpenseSummary(expenses []Expense, defaultSplit Split) ExpenseSummary {
+// CreateExpenseSummary ...
+func CreateExpenseSummary(expenses []Expense, defaultSplit Split) ExpenseSummary {
 	expenseSummary := ExpenseSummary{}
+
+	currentStatus := PaidStatus
 
 	for _, expense := range expenses {
 		expenseType := expense.ExpenseType
@@ -34,7 +64,11 @@ func createExpenseSummary(expenses []Expense, defaultSplit Split) ExpenseSummary
 
 		expenseSummary.MyAmount += split.MyPercentage / 100.0 * expense.Amount
 		expenseSummary.HerAmount += split.HerPercentage / 100.0 * expense.Amount
+		if expense.Status.priority() > currentStatus.priority() {
+			currentStatus = expense.Status
+		}
 	}
 
+	expenseSummary.Status = string(currentStatus)
 	return expenseSummary
 }
